--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <nav>
@@ -16,7 +17,8 @@
             <div class="nav__btn-actions flex align-center">
                 <form action="" class="flex">
                     <div class="flex align-center">
-                    <select name="language" id="lg" class="txtWht form border-rounded select flex justify-center">
+                    <select name="language" id="lg" class="txtWht form border-rounded select flex justify-center align-center">
+                        
                         <option class="bg-wht reverse-color" value="ita">Italiano</option>
                         <option class="bg-wht reverse-color" value="eng">English</option>
                     </select>
