--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
-  <body>
-    <nav>
-      <div class="nav row flex justify-between mAuto p-top">
-        <div class="container nav flex justify-between">
-            <div class="nav__logo">
-                <img src="./assets/imgs/Netflix_2015_logo.svg.png" alt="Logo"/>
+  <body style="background-color: #fff;">
+    <nav class="transparent-black">
+      <div class="nav row flex justify-between mAuto p-top transparent">
+        <div class="container nav flex justify-between transparent">
+            <div class="nav__logo transparent">
+                <img class="transparent" src="./assets/imgs/Netflix_2015_logo.svg.png" alt="Logo"/>
             </div>
-            <div class="nav__btn-actions flex align-center">
-                <form action="" class="flex">
+            <div class="nav__btn-actions flex align-center transparent">
+                <form action="" class="flex transparent">
                     <div class="flex align-center">
                     <select name="language" id="lg" class="txtWht form border-rounded select flex justify-center align-center">
                         
