--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
-  <body style="background-color: #fff;">
-    <nav class="transparent-black">
+  <body>
+    <!-- <nav class="transparent-black">
       <div class="nav row flex justify-between mAuto p-top transparent">
         <div class="container nav flex justify-between transparent">
             <div class="nav__logo transparent">
@@ -38,6 +41,229 @@
       <div class="container">
 
       </div>
+    </div> -->
+      <nav>
+        <div class="nav row flex justify-between mAuto p-top transparent">
+          <div class="container nav flex justify-between transparent">
+            <div class="nav__logo transparent">
+              <img
+                src="./assets/imgs/Netflix_2015_logo.svg.png"
+                alt="Logo"
+                class="transparent"
+              />
+            </div>
+            <div class="nav__btn-actions flex align-center transparent">
+              <form action="" class="flex transparent">
+                <div class="flex align-center">
+                  <select
+                    name="language"
+                    id="lg"
+                    class="txtWht form border-rounded select flex justify-center align-center"
+                  >
+                    <option class="bg-wht reverse-color" value="ita">
+                      Italiano
+                    </option>
+                    <option class="bg-wht reverse-color" value="eng">
+                      English
+                    </option>
+                  </select>
+                </div>
+                <button
+                  class="btn-action primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht"
+                >
+                  Accedi
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <div class="row maxh">
+        <div class="row transparent">
+          <div
+            class="row container flex column transparent txt-center container-title"
+          >
+            <h1 class="transparent main-title">
+              Film, serie TV e tanto altro, senza limiti
+            </h1>
+            <br />
+            <h3 class="transparent h3">
+              Guarda ciò che vuoi ovunque. Disdici quando vuoi.
+            </h3>
+
+            <div class="transparent">
+              <p class="transparent p">
+                Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti
+                o riattivare il tuo abbonamento.
+              </p>
+              <form action="" class="transparent flex justify-center">
+                <input type="email" name="" class="input-mail border-rounded" />
+                <button
+                  class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht"
+                >
+                  Inizia >
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row flex column justify-center align-center">
+        <div class="row container section flex-mobile">
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Goditi Netflix sulla tua TV</h2>
+              <p class="h3 mtop16">
+                Guarda Netflix su smart TV, Playstation, Xbox, Chromecast, Apple
+                TV, lettori Blu-ray e molti altri dispositivi.
+              </p>
+            </div>
+          </div>
+          <div class="box transparent">
+            <img src="./assets/imgs/tv.png" alt="tv image" class="box__img transparent">
+            <div class="box__video v1 flex justify-center align-center transparent">
+                <video src="./assets/video/video-tv-0819.m4v" autoplay loop></video>
+            </div>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="row container section">
+          <div class="box transparent">
+            <img src="./assets/imgs/device-pile.png" alt="device image" class="box__img" />
+            <div class="box__video v2 flex justify-center align-center">
+                <video src="./assets/video/video-devices.m4v" autoplay loop></video>
+            </div>
+          </div>
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Guarda Netflix ovunque</h2>
+              <p class="h3 mtop16">
+                Cellulare, tablet, laptop e TV: scegli tu cosa usare per
+                guardare in streaming film e serie TV senza limiti.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="row container section">
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Crea profili per i bambini</h2>
+              <p class="h3 mtop16">
+                I bambini scoprono nuove avventure in compagnia dei loro
+                personaggi preferiti in uno spazio tutto loro già incluso nel
+                tuo abbonamento.
+              </p>
+            </div>
+          </div>
+          <div class="box box__img3"></div>
+        </div>
+        <div class="divider"></div>
+        <div class="row container section">
+          <div class="box box__img4 flex column justify-end align-center">
+            <div class="box__download black flex justify-between align-center">
+                <img src="./assets/imgs/boxshot.png" alt="boxshot" width="57px" height="84px" />
+                <div class="box__titles">
+                    <p class="color-wht">Stranger Things</p>
+                    <p class="blue">Download in corso...</p>
+                </div>
+                <img width="50px" height="50px" src="./assets/video/download-icon.gif" />
+            </div>
+          </div>
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">
+                Scarica le tue serie da guardare offline
+              </h2>
+              <p class="h3 mtop16">
+                Guarda in aereo, sul treno, in astronave...
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="divider"></div>
     </div>
+      <div class="row  maxh">
+        <div class="row section flex column justify-center align-center">
+            <div class="row container flex column  txt-center  ">
+                <h2 class="main-title">Domande frequenti</h2>
+                <div class="faq">
+                    <ul class="w100">
+                        <li>
+                            <p class="color-wht">Cos'è Netflix?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li>
+                            <p class="color-wht">Quanto costa Netflix?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li>
+                            <p class="color-wht">Dove posso guardare Netflix?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li>
+                            <p class="color-wht">Come posso disdire?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li>
+                            <p class="color-wht">Cosa posso guardare su Netflix?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li>
+                            <p class="color-wht">Netflix è adatto ai bambini?</p>
+                            <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row container flex txt-center mtop45 ">
+                    <form action="" class="  flex column justify-center">
+                        <p class="p  ">Vuoi guardare Netflix? Inserisci l'indirizzo email per
+                            abbonarti o riattivare il
+                            tuo
+                            abbonamento.
+                        </p>
+                        <div class="flex justify-center w100 mtop16">
+                            <input type="email" name="" class="input-mail border-rounded fpSize">
+                            <button
+                                class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">Inizia
+                                ></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="divider"></div>
   </body>
 </html>
