--- a/index.html
+++ b/index.html
@@ -10,62 +10,64 @@
 </head>
 
 <body>
-  <nav>
-    <div class="nav row flex justify-between mAuto p-top transparent">
-      <div class="container nav flex justify-between transparent">
-        <div class="nav__logo transparent">
-          <img src="./assets/imgs/Netflix_2015_logo.svg.png" alt="Logo" class="transparent" />
-        </div>
-        <div class="nav__btn-actions flex align-center transparent">
-          <form action="" class="flex transparent">
-            <div class="flex align-center">
-              <select name="language" id="lg"
-                class="txtWht form border-rounded select flex justify-center align-center bg-input">
-                <option class="bg-wht reverse-color" value="ita">
-                  Italiano
-                </option>
-                <option class="bg-wht reverse-color" value="eng">
-                  English
-                </option>
-              </select>
-            </div>
-            <button
-              class="btn-action primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">
-              Accedi
-            </button>
-          </form>
+  <header class="h600">
+    <div class="overlay">
+    <nav >
+      <div class="nav row flex justify-between mAuto p-top transparent">
+        <div class="container nav flex justify-between transparent">
+          <div class="nav__logo transparent">
+            <img
+              src="./assets/imgs/Netflix_2015_logo.svg.png"
+              alt="Logo"
+              class="transparent"
+            />
+          </div>
+          <div class="nav__btn-actions flex align-center transparent">
+            <form action="" class="flex transparent">
+              <div class="flex align-center">
+                <select
+                  name="language"
+                  id="lg"
+                  class="txtWht form border-rounded select flex justify-center align-center"
+                >
+                  <option class="bg-wht reverse-color" value="ita">
+                    Italiano
+                  </option>
+                  <option class="bg-wht reverse-color" value="eng">
+                    English
+                  </option>
+                </select>
+              </div>
+              <button
+                class="btn-action primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht"
+              >
+                Accedi
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <div class="row maxh">
-    <div class="row transparent">
-      <div class="row container flex column transparent txt-center container-title">
-        <h1 class="transparent main-title">
-          Film, serie TV e tanto altro, senza limiti
-        </h1>
-        <br />
-        <h3 class="transparent h3">
-          Guarda ciò che vuoi ovunque. Disdici quando vuoi.
-        </h3>
-
-        <div class="transparent">
-          <p class="transparent p">
-            Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti
-            o riattivare il tuo abbonamento.
-          </p>
-          <form action="" class="transparent flex justify-center">
-            <input type="email" name="" class="input-mail border-rounded" />
-            <button
-              class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">
-              Inizia >
-            </button>
-          </form>
+    <div class="row maxh">
+      <div class="row transparent">
+        <div class="row container flex column transparent txt-center container-title">
+          
+            <h1 class="transparent main-title ">Film, serie TV e tanto altro, senza limiti</h1>
+            <h3 class="transparent h3 mtop25">Guarda ciò che vuoi ovunque. Disdici quando vuoi.</h3>
+            
+        <div class="transparent" >
+          <p class="transparent p mtop25">Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti o riattivare il tuo abbonamento.</p>
+            <form action="" class="transparent flex justify-center mtop16 ">
+                <input type="email" name="" class="input-mail border-rounded">
+                <button class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">Inizia ></button>
+            </form>
+        </div>
         </div>
       </div>
     </div>
   </div>
+  </header>
   <div class="row flex column justify-center align-center">
     <div class="row container section flex-mobile">
       <div class="box flex column justify-center align-center">
