--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="h600">
       <div class="overlay">
         <nav>
-          <div class="nav row flex justify-between mAuto p-top transparent">
+          <div class="nav row flex mAuto p-top transparent justify-center">
             <div class="container nav flex justify-between transparent">
               <div class="nav__logo transparent">
                 <img
