--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
           <div
             class="box__video v1 flex justify-center align-center transparent"
           >
-            <video src="./assets/video/video-tv-0819.m4v" autoplay loop></video>
+            <video src="./assets/video/video-tv-0819.m4v" muted autoplay loop></video>
           </div>
         </div>
       </div>
@@ -674,7 +674,7 @@
             class="box__img"
           />
           <div class="box__video v2 flex justify-center align-center">
-            <video src="./assets/video/video-devices.m4v" autoplay loop></video>
+            <video src="./assets/video/video-devices.m4v" muted autoplay loop></video>
           </div>
         </div>
         <div class="box flex column justify-center align-center">
