upgraded media queries

--- a/index.html
+++ b/index.html
@@ -316,50 +316,21 @@
       </div>
     </div>
   </header>
-    <div class="row flex column justify-center align-center">
-      <div class="row container section flex-mobile">
-        <div class="box flex column justify-center align-center">
-          <div class="box__title">
-            <h2 class="main-title">Goditi Netflix sulla tua TV</h2>
-            <p class="h3 mtop16">
-              Guarda Netflix su smart TV, Playstation, Xbox, Chromecast, Apple
-              TV, lettori Blu-ray e molti altri dispositivi.
-            </p>
-          </div>
-        </div>
-        <div class="box transparent">
-          <img
-            src="./assets/imgs/tv.png"
-            alt="tv image"
-            class="box__img transparent"
-          />
-          <div
-            class="box__video v1 flex justify-center align-center transparent"
-          >
-            <video src="./assets/video/video-tv-0819.m4v" muted autoplay loop></video>
-          </div>
+  <div class="row flex column justify-center align-center">
+    <div class="row container section flex-mobile">
+      <div class="box flex column justify-center align-center">
+        <div class="box__title">
+          <h2 class="main-title">Goditi Netflix sulla tua TV</h2>
+          <p class="h3 mtop16">
+            Guarda Netflix su smart TV, Playstation, Xbox, Chromecast, Apple
+            TV, lettori Blu-ray e molti altri dispositivi.
+          </p>
         </div>
       </div>
-      <div class="divider"></div>
-      <div class="row container section">
-        <div class="box transparent">
-          <img
-            src="./assets/imgs/device-pile.png"
-            alt="device image"
-            class="box__img"
-          />
-          <div class="box__video v2 flex justify-center align-center">
-            <video src="./assets/video/video-devices.m4v" muted autoplay loop></video>
-          </div>
-        </div>
-        <div class="box flex column justify-center align-center">
-          <div class="box__title">
-            <h2 class="main-title">Guarda Netflix ovunque</h2>
-            <p class="h3 mtop16">
-              Cellulare, tablet, laptop e TV: scegli tu cosa usare per guardare
-              in streaming film e serie TV senza limiti.
-            </p>
-          </div>
+      <div class="box transparent">
+        <img src="./assets/imgs/tv.png" alt="tv image" class="box__img transparent" />
+        <div class="box__video v1 flex justify-center align-center transparent">
+          <video src="./assets/video/video-tv-0819.m4v" muted autoplay loop></video>
         </div>
       </div>
     </div>
@@ -368,7 +339,7 @@
       <div class="box transparent">
         <img src="./assets/imgs/device-pile.png" alt="device image" class="box__img" />
         <div class="box__video v2 flex justify-center align-center">
-          <video src="./assets/video/video-devices.m4v" autoplay loop></video>
+          <video src="./assets/video/video-devices.m4v" muted autoplay loop></video>
         </div>
       </div>
       <div class="box flex column justify-center align-center">
@@ -381,46 +352,65 @@
         </div>
       </div>
     </div>
-    <div class="divider"></div>
-    <div class="row container section">
-      <div class="box flex column justify-center align-center">
-        <div class="box__title">
-          <h2 class="main-title">Crea profili per i bambini</h2>
-          <p class="h3 mtop16">
-            I bambini scoprono nuove avventure in compagnia dei loro
-            personaggi preferiti in uno spazio tutto loro già incluso nel tuo
-            abbonamento.
-          </p>
-        </div>
-      </div>
-      <div class="box box__img3"></div>
-    </div>
-    <div class="divider"></div>
-    <div class="row container section">
-      <div class="box box__img4 flex column justify-end align-center">
-        <div class="box__download black flex justify-between align-center">
-          <img src="./assets/imgs/boxshot.png" alt="boxshot" width="57px" height="84px" />
-          <div class="box__titles">
-            <p class="color-wht">Stranger Things</p>
-            <p class="blue">Download in corso...</p>
-          </div>
-          <img width="50px" height="50px" src="./assets/video/download-icon.gif" />
-        </div>
-      </div>
-      <div class="box flex column justify-center align-center">
-        <div class="box__title">
-          <h2 class="main-title">Scarica le tue serie da guardare offline</h2>
-          <p class="h3 mtop16">Guarda in aereo, sul treno, in astronave...</p>
-        </div>
+  </div>
+  <div class="divider"></div>
+  <div class="row container section">
+    <div class="box transparent">
+      <img src="./assets/imgs/device-pile.png" alt="device image" class="box__img" />
+      <div class="box__video v2 flex justify-center align-center">
+        <video src="./assets/video/video-devices.m4v" autoplay loop></video>
       </div>
     </div>
-    <div class="divider"></div>
+    <div class="box flex column justify-center align-center">
+      <div class="box__title">
+        <h2 class="main-title">Guarda Netflix ovunque</h2>
+        <p class="h3 mtop16">
+          Cellulare, tablet, laptop e TV: scegli tu cosa usare per guardare
+          in streaming film e serie TV senza limiti.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
+  <div class="row container section">
+    <div class="box flex column justify-center align-center">
+      <div class="box__title">
+        <h2 class="main-title">Crea profili per i bambini</h2>
+        <p class="h3 mtop16">
+          I bambini scoprono nuove avventure in compagnia dei loro
+          personaggi preferiti in uno spazio tutto loro già incluso nel tuo
+          abbonamento.
+        </p>
+      </div>
+    </div>
+    <div class="box box__img3"></div>
+  </div>
+  <div class="divider"></div>
+  <div class="row container section">
+    <div class="box box__img4 flex column justify-end align-center">
+      <div class="box__download black flex justify-between align-center">
+        <img src="./assets/imgs/boxshot.png" alt="boxshot" width="57px" height="84px" />
+        <div class="box__titles">
+          <p class="color-wht">Stranger Things</p>
+          <p class="blue">Download in corso...</p>
+        </div>
+        <img width="50px" height="50px" src="./assets/video/download-icon.gif" />
+      </div>
+    </div>
+    <div class="box flex column justify-center align-center">
+      <div class="box__title">
+        <h2 class="main-title">Scarica le tue serie da guardare offline</h2>
+        <p class="h3 mtop16">Guarda in aereo, sul treno, in astronave...</p>
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
   </div>
   <div class="row maxh">
     <div class="row section flex column justify-center align-center">
       <div class="row container flex column txt-center">
         <h2 class="main-title">Domande frequenti</h2>
-        <div class="faq">
+        <div class="faq  mtop25">
           <ul class="w100">
             <li>
               <p class="color-wht">Cos'è Netflix?</p>
@@ -497,7 +487,7 @@
     </div>
   </div>
   <div class="divider"></div>
-  <footer class="row container section flex column align-center">
+  <footer class="row container section flex column align-center footer-pad">
     <div class="row container flex column">
       <div class="support_number">
         <p>Domande? Chiama <a href="#">800-130-364</a></p>
