Header height fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </nav>
 
-      <div class="row bg">
+      <div class="row bg mtop100">
         <div class="row transparent">
           <div class="row container flex column transparent txt-center container-title">
             <h1 class="transparent main-title">
